fix: Images stretch with smaller viewport

--- a/css/styles.css
+++ b/css/styles.css
@@ -169,7 +169,7 @@ nav h1 {
 	margin-block-start: 0;
 	margin-block-end: 0;
 	display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
 	grid-auto-flow: row;
 }
 
